[gd_scene load_steps=2 format=3 uid="uid://c5qg2j1qa4g0b"]

[ext_resource type="Script" uid="uid://dpijiwr0pfpn7" path="res://ui/DynastyUI.gd" id="1_abcde"]

[node name="Dynasty_UI" type="PanelContainer"]
custom_minimum_size = Vector2(340, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_abcde")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainLayout" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="AncestorsScroll" type="ScrollContainer" parent="Margin/MainLayout"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="AncestorsHBox" type="HBoxContainer" parent="Margin/MainLayout/AncestorsScroll"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Margin/MainLayout"]
layout_mode = 2

[node name="CurrentJarlPanel" type="HBoxContainer" parent="Margin/MainLayout"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Portrait" type="TextureRect" parent="Margin/MainLayout/CurrentJarlPanel"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
expand_mode = 5

[node name="Stats" type="VBoxContainer" parent="Margin/MainLayout/CurrentJarlPanel"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Margin/MainLayout/CurrentJarlPanel/Stats"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="Margin/MainLayout/CurrentJarlPanel/Stats"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="Margin/MainLayout"]
layout_mode = 2

[node name="HeirsLabel" type="Label" parent="Margin/MainLayout"]
layout_mode = 2
text = "Heirs:"

[node name="HeirsScroll" type="ScrollContainer" parent="Margin/MainLayout"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_vertical = 3

[node name="HeirsHBox" type="HBoxContainer" parent="Margin/MainLayout/HeirsScroll"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CloseButton" type="Button" parent="Margin/MainLayout"]
layout_mode = 2
text = "Close"

[node name="ContextMenu" type="PopupMenu" parent="."]
